--- a/css/utilities.css
+++ b/css/utilities.css
@@ -1,7 +1,6 @@
 /* 通用樣式 / Utilities */
 .container {
-  width: 1320px;
-  max-width: 100%;
+  max-width: 1320px;
   margin: 0 auto;
   padding-left: 12px;
   padding-right: 12px;
